<?xml version="1.0" encoding="utf-8"?><!--

  {EasyGank}  Copyright (C) {2015}  {CaMnter}

  This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.
  This is free software, and you are welcome to redistribute it
  under certain conditions; type `show c' for details.

  The hypothetical commands `show w' and `show c' should show the appropriate
  parts of the General Public License.  Of course, your program's commands
  might be different; for a GUI interface, you would use an "about box".

  You should also get your employer (if you work as a programmer) or school,
  if any, to sign a "copyright disclaimer" for the program, if necessary.
  For more information on this, and how to apply and follow the GNU GPL, see
  <http://www.gnu.org/licenses/>.

  The GNU General Public License does not permit incorporating your program
  into proprietary programs.  If your program is a subroutine library, you
  may consider it more useful to permit linking proprietary applications with
  the library.  If this is what you want to do, use the GNU Lesser General
  Public License instead of this License.  But first, please read
  <http://www.gnu.org/philosophy/why-not-lgpl.html>.

-->
<resources>
    <string name="app_name">EasyGank妹纸</string>
    <string name="app_menu">EasyGank Menu</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="main_empty_data">感谢你热爱学习，更重要的是妹纸，可惜没干货了T~T</string>
    <string name="main_load_error">加载失败，再试试T~T</string>


    <string name="daily_android_tag_tv">Android</string>
    <string name="daily_ios_tag_tv">iOS</string>
    <string name="daily_js_tag_tv">前端</string>
    <string name="navigation_title">干货在手，万事精彩。</string>

    <string name="common_navigation_daily">每日精彩</string>
    <string name="common_welfare">福利</string>
    <string name="common_android">Android</string>
    <string name="common_ios">iOS</string>
    <string name="common_js">前端</string>
    <string name="common_video">休息视频</string>
    <string name="common_resources">拓展资源</string>
    <string name="common_app">App</string>
    <string name="common_via">via. %s</string>
    <string name="common_via_key">via. </string>
    <string name="common_go_back_tip">再按一次退出</string>
    <string name="common_copy_success">复制成功</string>
    <string name="common_network_error">网络错误</string>

    <string name="technology_github_tag_tv">github</string>
    <string name="technology_blog_tag_tv">文章</string>

    <string name="menu_web_refresh">重新加载</string>
    <string name="menu_web_copy">复制链接</string>
    <string name="menu_web_share">分享链接</string>
    <string name="menu_web_horizontal">横屏显示</string>
    <string name="menu_web_vertical">竖屏显示</string>


    <string name="menu_picture_download">下载图片</string>
    <string name="menu_picture_copy">复制链接</string>
    <string name="menu_picture_share">分享出去</string>

    <string name="picture_loading">图片还在加载中，请稍等...</string>
    <string name="picture_download">下载高清原图到手机?</string>

    <string name="menu_main_about">关于EasyGank妹纸</string>
    <string name="menu_main_top_github">热门 Github 仓库</string>
    <string name="menu_main_home_page">前往 gank.io 主页</string>


    <string name="about_title">关于EasyGank妹纸</string>
    <string name="about_nickname">CaMnter</string>
    <string name="about_sign">目送三次元世界渐行渐远的二次元的少年</string>
    <string name="about_github">https://github.com/CaMnter</string>
    <string name="about_project_introduce">项目介绍</string>
    <string name="about_project_introduce_content">EasyGank妹纸项目所用的基本上是Rx系列的框架 ( Square + ReactiveX ) :\n\n\tRxJava\n\tRxAndroid\n\tOkhttp\n\tRetrofit\n\tButterknife\n\tGlide\n\tReservoir\n\n以基本的MVP模式为主划分模块，抽出Presenter作为View代理业务层，减轻View层代码的耦合度，然后集成了现在主流的RxJava+RxAndroid+Retrofit组合框架。\n\nEasyGank：https://github.com/CaMnter/EasyGank\n\nApi接口提供：http://gank.io/api</string>
    <string name="about_project_other">最后一些话</string>
    <string name="about_project_other_content">\t\t15毕业我的，在16初对这个世界抱着很大的期待，技术在与时俱进，如果不跟进的话是多么让人忧伤。\n\t\t做EasyGank纯粹是为了巩固学习而已，而且干货集中营是一个技术潮流的先驱网站，提供的干货都很不错。公司项目用到了RxJava但是只是小模块，项目沉淀很大，重构需要的代价也很大。\n\t\t早就知道Rx+Retrofit这组合很有名，一直没机会用，公司也有自己的核心架构，所以也在开始写了EasyGank妹纸项目。也其恰巧这个月不是很忙，时间很容易挤出来，平时要是忙的话，晚上再回来写自己的项目，会崩溃了。为了写这个项目日夜操劳，最多操劳的还是UI设计这块，也借鉴了drakeet的项目，真的很棒。\n\t\t开源的魅力就在于，感觉大家在做一个项目似的。相信很多人有过这样的感受：每换一个公司，你都会有新的收获，这之中的奥秘，就在于你接触了不同的项目、不同的世界。投入到开源世界的道理和你换公司是一样的，不同的领域、不同的世界、不同的收获。至少，我收获了很多，如果在公司一直待着，我是不可能用到这个项目里的框架的，都是现学现用的。\n\n\t总之，非常开心。</string>

</resources>
